--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_PRIVY_APP_ID=<your-privy-app-id>
 PRIVY_APP_SECRET=<your-privy-app-secret>
-BACKEND_APP_URL=https://api.staging.samuraixbt.io/api/v1
+NEXT_PUBLIC_BACKEND_APP_URL=https://api.staging.samuraixbt.io/api/v1
 
